<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="#000000"/>

        <CheckBox android:id="@+id/checkbox_whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Whipped_Cream"
            android:paddingLeft="24dp"/>
        <CheckBox android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:onClick="decrement"
                />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAllCaps="true"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"/>
            <Button
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:onClick="increment"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="16dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"
            />

    </LinearLayout>
</ScrollView>